Finish randomshirt controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <!-- <a href="/random_shirt">GO BUY MOAR SHIRTS</a> -->
+  <%# link_to "GO BUY MOOOOAR SHIRTS", "/random_shirt" %>
+  <%= link_to "GO BUY MOOOOAAAAAR SHIRTS", random_shirt_path %>
 <%= yield %>
 
 </body>
