--- a/app/views/tags/new.html.erb
+++ b/app/views/tags/new.html.erb
@@ -4,16 +4,5 @@
   <input type="submit" value="Create Tag">
 </form> -->
 
-<% if @tag.errors.any? %>
-  <ul>
-    <% @tag.errors.full_messages.each do |error|  %>
-       <li><%= error %></li>
-    <% end %>
-  </ul>
-<% end %>
-
-<%= form_for @tag do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.submit %>
-<% end %>
+<h1>Create a new Tag</h1>
+<%= render 'form' %>
