--- a/app/views/shirts/index.html.erb
+++ b/app/views/shirts/index.html.erb
@@ -1,11 +1,5 @@
 <h1>All the shirts</h1>
 
 <ul>
-
-<% @shirts.each do |shirt| %>
-    <li><%= shirt.name %>
-      by <%= shirt.artist %>
-      <%= image_tag(shirt.image_url) %>
-    </li>
-<% end %>
+  <%= render @shirts %>
 </ul>
