--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,14 +6,23 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
-<body>
+<body class='container'>
   <h2><%= link_to "Holy Shirt", root_path %></h2>
-  <ul>
-    <li><%= link_to "See all the shirts", shirts_path %> </li>
-    <li>
-      <%= link_to "Buy a new shirt", random_shirt_path %>
-    </li>
-  </ul>
+  <div class="row">
+    <div class="col-xs-6">
+      <ul class="list-inline">
+        <li><%= link_to "See all the shirts", shirts_path %> </li>
+        <li> <%= link_to "Buy a new shirt", random_shirt_path %> </li>
+      </ul>
+    </div>
+    <div class="col-xs-6">
+      <form action="/search" method="get">
+        <input type="search" name="q" id="search">
+        <input type="submit" value="Search!">
+      </form>
+    </div>
+  </div>
+
   <%= yield %>
 
 </body>
