--- a/app/views/shirts/_shirt.html.erb
+++ b/app/views/shirts/_shirt.html.erb
@@ -1,9 +1,11 @@
 <div class='col-xs-12 col-sm-6'>
-<div class="panel panel-default">
-  <div class="panel-body">
-    <%= truncate(shirt.name, length: 10) %>
-    by <%= shirt.artist %>
-    <%= image_tag(shirt.image_url, class: 'img-responsive') %>
+  <%= link_to shirt do %>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <%= truncate(shirt.name, length: 10) %>
+      by <%= shirt.artist %>
+      <%= image_tag(shirt.image_url, class: 'img-responsive') %>
+    </div>
   </div>
-</div>
+<% end %>
 </div>
