--- a/app/views/shirts/show.html.erb
+++ b/app/views/shirts/show.html.erb
@@ -1,2 +1,13 @@
 <h1><%= @shirt.name %></h1>
 <%= link_to "Edit this shirt", edit_shirt_path(@shirt) %>
+
+<%= form_for [@shirt, Comment.new], remote: true do |f| %>
+  <div class="body">
+    <%= f.text_area :body, placeholder: "Enter your comment here. Don't be an ass" %>
+  </div>
+  <%= f.submit %>
+<% end %>
+<h3>Comments</h3>
+<div id="comments">
+  <%= render @shirt.comments %>
+</div>
