--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,14 @@
     <div class="col-xs-3">
       <% if user_signed_in? %>
          Welcome, <%= current_user.username %>
+         <%= link_to "Sign out", sign_out_path, method: :delete %>
+       <% else %>
+         <%= form_tag sign_in_path do %>
+           <%= text_field_tag :username, nil, placeholder: "Username" %>
+           <%= password_field_tag :password, nil, placeholder: "Password" %>
+           <%= submit_tag "Log in", class: 'btn btn-success'%>
+         <% end %>
+         <%= link_to "Or Sign Up", sign_up_path %>
       <% end %>
     </div>
     <div class="col-xs-3">
@@ -27,7 +35,19 @@
       </form>
     </div>
   </div>
-  <%= notice %>
+  <% if notice %>
+    <div class="alert alert-success alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= notice %>
+    </div>
+  <% end %>
+
+  <% if alert %>
+    <div class="alert alert-danger alert-dismissible" role="alert">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= alert %>
+    </div>
+  <% end %>
 
   <%= yield %>
 
